Fixes #1347 - Clay CSS Custom Checkbox and Radio revert changes made in Bootstrap `4.1.1` fc0fcc4 the IE bug isn't present in Clay CSS and Bootstrap's version doesn't align properly without text

--- a/packages/clay-css/src/scss/components/_custom-forms.scss
+++ b/packages/clay-css/src/scss/components/_custom-forms.scss
@@ -65,13 +65,18 @@
 .custom-control {
 	label {
 		cursor: $custom-control-description-cursor;
-		font-size: 1rem;
+		font-size: $font-size-base;
 	}
 }
 
 .custom-control-label {
 	font-size: $custom-control-description-font-size;
 	line-height: $custom-control-description-line-height;
+	position: static;
+}
+
+label.custom-control-label {
+	font-size: $custom-control-description-font-size;
 }
 
 .custom-control-label-text {
@@ -85,6 +90,11 @@
 	border-style: $custom-control-indicator-border-style;
 	border-width: $custom-control-indicator-border-width;
 	font-size: $custom-control-indicator-size;
+	left: 0;
+}
+
+.custom-control-label::after {
+	left: 0;
 }
 
 .custom-control-input {
